--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "app.py"
+      "dest": "/app.py"
     }
   ],
   "env": {
@@ -28,3 +28,4 @@
     }
   }
 }
+
